# self-healing-ml-agentic-demo

./: .gitignore  CDR_OLLAMA_Serve.cmd  README.md  pyproject.toml
agents/: code_config_critic.py  config_critic.py  data_generator.py  data_pipeline_analyst.py  graph_state.py  llm_client.py  memory.jsonl  memory_store.py  memory_summarizer.py  monitoring_interpreter.py  nodes.py  orchestrator.py  retrainer.py  workflow.py
data/: test_round0.csv  test_round0_pred.csv  test_round1_drift.csv  test_round1_pred.csv  test_round2_drift.csv  test_round2_pred.csv  train.csv
model/: config.yaml  model.joblib  predict.py  train_model.py
monitoring/: compute_metrics.py  drift_report_round1.json  drift_report_round2.json
simulations/: inject_drift.py  run_round.py
